# gestao_escolar_modelagem

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
escola/: admin.py
escola/migrations/: 0001_initial.py  0002_alter_projeto_extracurricular_options_and_more.py  0002_avaliacao_curso_disciplina_turma.py  0003_remove_turma_matriculas_remove_turma_num_alunos_and_more.py  0004_rename_tipo_avaliacao_tema_alter_turma_num_turma.py  0005_remove_disciplina_avaliacoes.py  0006_avaliacao_disciplina.py  0007_remove_avaliacao_disciplina.py  0008_avaliacao_disciplina.py  0009_alter_avaliacao_data_alter_disciplina_professores.py  0010_alter_frequencia_turma.py  0011_alter_frequencia_obvervacoes_alter_frequencia_turma.py  0012_rename_turma_frequencia_matricula_and_more.py  0013_alter_avaliacao_data.py  0013_alter_avaliacao_data_alter_curso_carga_horaria_and_more.py
escola/models/: __init__.py  aluno.py  avaliacao.py  bolsa_pesquisa.py  curso.py  disciplina.py  frequencia.py  matricula.py  professor.py  projeto_extracurricular.py  turma.py
escola/serializers/: __init__.py  aluno.py  avaliacao.py  bolsa_pesquisa.py  curso.py  disciplina.py  frequencia.py  matricula.py  professor.py  projeto_extracurricular.py  turma.py
escola/views/: __init__.py  aluno.py  avaliacao.py  bolsa_pesquisa.py  curso.py  disciplina.py  frequencia.py  matricula.py  professor.py  projeto_extracurricular.py  turma.py
